// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Fragment>
  <withContext(createMutationContainer(Relay(StoryClosedTimeoutContainer)))
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <Stream
    comments={
      Array [
        Object {
          "id": "comment-1",
        },
        Object {
          "id": "comment-2",
        },
      ]
    }
    disableLoadMore={false}
    onChangeOrderBy={[Function]}
    onLoadMore={[Function]}
    orderBy="CREATED_AT_ASC"
    refetching={false}
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
    viewer={null}
  />
</Fragment>
`;

exports[`when has more comments renders hasMore 1`] = `
<Fragment>
  <withContext(createMutationContainer(Relay(StoryClosedTimeoutContainer)))
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <Stream
    comments={
      Array [
        Object {
          "id": "comment-1",
        },
        Object {
          "id": "comment-2",
        },
      ]
    }
    disableLoadMore={false}
    hasMore={true}
    onChangeOrderBy={[Function]}
    onLoadMore={[Function]}
    orderBy="CREATED_AT_ASC"
    refetching={false}
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
    viewer={null}
  />
</Fragment>
`;

exports[`when has more comments when loading more disables load more button 1`] = `
<Fragment>
  <withContext(createMutationContainer(Relay(StoryClosedTimeoutContainer)))
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <Stream
    comments={
      Array [
        Object {
          "id": "comment-1",
        },
        Object {
          "id": "comment-2",
        },
      ]
    }
    disableLoadMore={true}
    hasMore={true}
    onChangeOrderBy={[Function]}
    onLoadMore={[Function]}
    orderBy="CREATED_AT_ASC"
    refetching={false}
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
    viewer={null}
  />
</Fragment>
`;

exports[`when has more comments when loading more enable load more button after loading is done 1`] = `
<Fragment>
  <withContext(createMutationContainer(Relay(StoryClosedTimeoutContainer)))
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <Stream
    comments={
      Array [
        Object {
          "id": "comment-1",
        },
        Object {
          "id": "comment-2",
        },
      ]
    }
    disableLoadMore={false}
    hasMore={true}
    onChangeOrderBy={[Function]}
    onLoadMore={[Function]}
    orderBy="CREATED_AT_ASC"
    refetching={false}
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "comment-1",
              },
            },
            Object {
              "node": Object {
                "id": "comment-2",
              },
            },
          ],
        },
        "id": "story-id",
        "isClosed": false,
      }
    }
    viewer={null}
  />
</Fragment>
`;
